<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tube NEXT</string>
    <string name="menu_new_tab">Neuer Tab</string>
    <string name="menu_duplicate_tab">Tab duplizieren</string>
    <string name="menu_close_tab">Tab schließen</string>
    <string name="menu_reload">Neu laden</string>
    <string name="navigation_back">Zurück</string>
    <string name="navigation_forward">Vorwärts</string>
    <string name="menu_updates">Updates</string>
    <string name="default_tab_title">Neuer Tab</string>
    <string name="link_open_title">YouTube-Link öffnen</string>
    <string name="link_open_current">Im aktuellen Tab</string>
    <string name="link_open_new">In neuem Tab</string>
    <string name="link_open_external">Extern öffnen</string>
    <string name="link_copy">Link kopieren</string>
    <string name="link_share">Link teilen</string>
    <string name="privacy_share_video">Video datensparsam teilen</string>
    <string name="tab_closed_message">Tab wurde geschlossen</string>
    <string name="page_load_error">Seite konnte nicht geladen werden</string>
    <string name="tab_switcher_title">%1$d Tabs</string>
    <string name="tab_switcher_button">Tabs</string>
    <string name="url_copied">Link kopiert</string>
    <string name="tab_overview_title">Tabs</string>
    <string name="tab_overview_close">Tab-Übersicht schließen</string>
    <string name="tab_overview_close_others">Andere Tabs schließen</string>
    <string name="url_edit_title">URL bearbeiten</string>
    <string name="url_edit_hint">Adresse eingeben</string>
    <string name="action_open">Öffnen</string>
    <string name="loading_page">Seite wird aufbereitet...</string>
    <string name="background_audio_channel_name">Hintergrund-Audio</string>
    <string name="background_audio_notification_text">Audio wird im Hintergrund wiedergegeben</string>
    <string name="background_audio_play">Starten</string>
    <string name="background_audio_pause">Pausieren</string>
    <string name="background_audio_stop">Stoppen</string>
    <string name="home_feed_menu_button">Startseiten-Filter</string>
    <string name="home_feed_menu_title">In Startseite anzeigen:</string>
    <string name="home_feed_show_shorts">Shorts</string>
    <string name="home_feed_show_community">Community-Posts</string>
    <string name="home_feed_show_history">Zuletzt gesehen</string>
    <string name="watch_page_menu_title">Watch-Seite:</string>
    <string name="watch_page_hide_branding">Kanal-Branding ausblenden</string>
    <string name="watch_page_show_dislikes">Geschätzte Dislikes anzeigen (Return YouTube Dislike)</string>
    <string name="ryd_consent_title">Datenschutzhinweis</string>
    <string name="ryd_consent_message">Für diese Funktion kontaktiert Tube NEXT den Dienst „Return YouTube Dislike“. Dabei werden die ID angesehener Videos sowie technisch bedingt deine IP-Adresse und der Zeitpunkt des Abrufs übertragen. Wenn du ein Video likest oder dislikest, werden außerdem deine Auswahl und eine zufällig erzeugte, dauerhafte RYD-ID übermittelt. Der Dienst könnte diese Daten zu einem Nutzungs- oder Interessenprofil zusammenführen. Die angezeigten Dislike-Zahlen sind Schätzungen von Return YouTube Dislike und keine offiziellen YouTube-Werte.</string>
    <string name="ryd_consent_accept">Zustimmen und aktivieren</string>
    <string name="ryd_consent_more">Mehr erfahren</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_section_home_feed">Startseite</string>
    <string name="settings_section_watch_page">Watch-Seite</string>
    <string name="settings_section_youtube_links">YouTube-Links</string>
    <string name="youtube_links_status_enabled">Alle unterstützten YouTube-Links öffnen sich mit Tube NEXT.</string>
    <string name="youtube_links_status_partial">Aktiv für %1$d von %2$d YouTube-Adressen.</string>
    <string name="youtube_links_status_disabled">YouTube-Links sind noch nicht mit Tube NEXT verknüpft.</string>
    <string name="youtube_links_status_check_settings">Öffnungsstatus bitte in den Android-Einstellungen prüfen.</string>
    <string name="youtube_links_open_settings">Linkzuordnung öffnen</string>
    <string name="youtube_links_onboarding_title">YouTube-Links mit Tube NEXT öffnen?</string>
    <string name="youtube_links_onboarding_message">Android benötigt dafür einmalig deine Zustimmung. Aktiviere auf der nächsten Seite „Unterstützte Links öffnen“ und wähle die angezeigten YouTube-Adressen aus.</string>
    <string name="youtube_links_onboarding_configure">Jetzt einrichten</string>
    <string name="youtube_links_onboarding_later">Später</string>
    <string name="youtube_links_onboarding_never">Nicht mehr fragen</string>
    <string name="youtube_links_result_enabled">YouTube-Links sind jetzt vollständig mit Tube NEXT verknüpft.</string>
    <string name="youtube_links_result_partial">Ein Teil der YouTube-Adressen ist mit Tube NEXT verknüpft.</string>
    <string name="youtube_links_result_not_enabled">YouTube-Links wurden noch nicht für Tube NEXT aktiviert.</string>
    <string name="youtube_links_result_check_settings">Die Linkzuordnung kann auf dieser Android-Version nicht automatisch geprüft werden.</string>
    <string name="settings_section_progress_diagnostics">Fullscreen-Fortschrittsdiagnose</string>
    <string name="progress_diagnostics_count">Gespeicherte Auffälligkeiten: %1$d von maximal 20</string>
    <string name="progress_diagnostics_save">Diagnosepaket in Downloads speichern</string>
    <string name="progress_diagnostics_saved">Gespeichert unter %1$s</string>
    <string name="progress_diagnostics_save_failed">Diagnosepaket konnte nicht gespeichert werden</string>
    <string name="progress_diagnostics_share">Diagnosepaket teilen</string>
    <string name="progress_diagnostics_share_chooser">Diagnosepaket teilen</string>
    <string name="progress_diagnostics_delete">Diagnosedaten löschen</string>
    <string name="progress_diagnostics_delete_title">Diagnosedaten löschen?</string>
    <string name="progress_diagnostics_delete_message">Alle intern gespeicherten Auffälligkeiten und Screenshots werden dauerhaft entfernt. Bereits exportierte Pakete in Downloads bleiben erhalten.</string>
    <string name="progress_diagnostics_deleted">Diagnoseprotokoll und Screenshots gelöscht</string>
    <string name="progress_diagnostics_empty">Noch keine Auffälligkeit gespeichert</string>
    <string name="settings_section_updates">Updates</string>
    <string name="settings_section_background_playback">Hintergrundwiedergabe</string>
    <string name="settings_open_update_manager">Updateverwaltung öffnen</string>
    <string name="settings_install_permission_active">Installationsfreigabe: aktiv</string>
    <string name="settings_install_permission_inactive">Installationsfreigabe: nicht aktiv</string>
    <string name="battery_optimization_hint_title">Hintergrundwiedergabe zuverlässiger machen</string>
    <string name="battery_optimization_hint_message">Android kann Apps im Hintergrund stark einschränken. Wenn Hintergrund-Audio abbrechen sollte, öffne die App-Info von Tube NEXT und setze die Akku-Nutzung dort auf nicht optimiert oder uneingeschränkt. Das ist optional und kann jederzeit später geändert werden.</string>
    <string name="battery_optimization_open_settings">App-Info öffnen</string>
    <string name="battery_optimization_later">Später</string>
    <string name="battery_optimization_never_show_again">Nicht mehr anzeigen</string>
    <string name="battery_optimization_hint_enabled">Akku-Hinweis beim Start anzeigen</string>
    <string name="battery_optimization_settings_guide_title">In der App-Info</string>
    <string name="battery_optimization_settings_guide_message">Android öffnet gleich die App-Info von Tube NEXT. Tippe dort auf Akku oder Akku-Nutzung und wähle nicht optimiert, uneingeschränkt oder die ähnlich benannte Hersteller-Option.</string>
    <string name="battery_optimization_status_unrestricted">Akku-Optimierung: Tube NEXT ist ausgenommen</string>
    <string name="battery_optimization_status_optimized">Akku-Optimierung: Android darf Tube NEXT einschränken</string>
    <string name="update_channel_name">Updates</string>
    <string name="update_notification_title">Update verfügbar</string>
    <string name="update_notification_text">Tube NEXT %1$s kann installiert werden.</string>
    <string name="update_action_open_manager">Anzeigen</string>
    <string name="update_action_ignore_version">Diese Version ignorieren</string>
    <string name="update_action_disable_notifications">Keine Hinweise mehr</string>
    <string name="update_notification_permission_title">Update gefunden</string>
    <string name="update_notification_permission_message">Tube NEXT %1$s ist verfügbar. Android blockiert Benachrichtigungen für Tube NEXT noch, deshalb kann der Update-Hinweis nicht als Notification erscheinen.</string>
    <string name="update_notification_permission_allow">Benachrichtigungen erlauben</string>
    <string name="update_notification_permission_denied">Benachrichtigungen sind weiterhin deaktiviert.</string>
    <string name="update_manager_title">Updates</string>
    <string name="update_current_version">Aktuell: %1$s</string>
    <string name="update_latest_version">Neu: %1$s</string>
    <string name="update_checking">Suche nach Updates...</string>
    <string name="update_available">Ein Update ist verfügbar.</string>
    <string name="update_up_to_date">Tube NEXT ist aktuell.</string>
    <string name="update_no_compatible_asset">Für dieses Gerät wurde kein passendes APK gefunden.</string>
    <string name="update_check_failed">Updateprüfung fehlgeschlagen: %1$s</string>
    <string name="update_download">Download</string>
    <string name="update_download_anyway">Trotzdem nur herunterladen</string>
    <string name="update_cancel_download">Abbrechen</string>
    <string name="update_install">Installieren</string>
    <string name="update_delete_file">Datei löschen</string>
    <string name="update_open_release_notes">Neuerungen öffnen</string>
    <string name="update_open_install_settings">Systemeinstellung öffnen</string>
    <string name="update_notifications_enabled">Update-Hinweise anzeigen</string>
    <string name="update_post_install_reminder_enabled">Nach Updates an Rücknahme der Installationsfreigabe erinnern</string>
    <string name="update_install_permission_needed_title">Installationsfreigabe erforderlich</string>
    <string name="update_install_permission_needed_before_download">Damit Tube NEXT das Update später installieren kann, muss Android die Installation unbekannter Apps für Tube NEXT erlauben.</string>
    <string name="update_install_permission_needed_before_install">Die Installationsfreigabe ist noch nicht aktiv. Öffne die Android-Einstellung und tippe danach hier erneut auf Installieren.</string>
    <string name="update_post_install_reminder_title">Installationsfreigabe prüfen</string>
    <string name="update_post_install_reminder_text">Das Update wurde installiert. Wenn du keine weiteren Updates direkt aus Tube NEXT installieren möchtest, kannst du die Android-Freigabe &quot;Unbekannte Apps installieren&quot; für Tube NEXT wieder deaktivieren. Beim nächsten Update fragt Tube NEXT bei Bedarf erneut.</string>
    <string name="update_hide_once">Diesmal ausblenden</string>
    <string name="update_hide_forever">Dauerhaft ausblenden</string>
    <string name="update_downloaded_status">Heruntergeladen: %1$s</string>
    <string name="update_downloading_status">Download: %1$d%%</string>
    <string name="update_download_cancelled">Download abgebrochen</string>
    <string name="update_download_failed">Download fehlgeschlagen: %1$s</string>
    <string name="update_download_completed">Download abgeschlossen</string>
    <string name="update_unknown_size">unbekannte Größe</string>
</resources>
